--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -2,6 +2,11 @@ server:
   port: 8081
   servlet:
     context-path: /luckmoney
+  ssl:
+    key-store: classpath:keystore/keystore.p12
+    key-store-password: 123456
+    key-store-type: PKCS12
+    key-alias: fta
 
 
 limit:
@@ -20,3 +25,5 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+  jackson:
+    default-property-inclusion: non_null
