--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -18,9 +18,9 @@ limit:
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/luckmoney?characterEncoding=utf-8
+    url: jdbc:mysql://127.0.0.1:3306/luckmoney?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=CONVERT_TO_NULL&useSSL=false&serverTimezone=CTT
     username: root
-    password:
+    password: 123456
   jpa:
     hibernate:
       ddl-auto: update
